# claude-code-cli

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
sample_project/: README.md  pyproject.toml
sample_project/sample_app/: __init__.py
sample_project/sample_app/agents/: __init__.py  executor.py  planner.py  tools.py
sample_project/sample_app/api/: middleware.py  routes.py  schemas.py
sample_project/sample_app/config/: feature_flags.py  secrets.py  settings.py
sample_project/sample_app/domain/: __init__.py  errors.py  events.py  models.py  policies.py
sample_project/sample_app/ingestion/: chunker.py  file_loader.py  metadata.py  parser.py  pipeline.py
sample_project/sample_app/observability/: logger.py  metrics.py  tracing.py
sample_project/sample_app/rag/: __init__.py  citations.py  context_builder.py  generator.py  prompts.py
sample_project/sample_app/search/: bm25.py  hybrid.py  query_expansion.py  reranker.py  tokenizer.py  vector_store.py
sample_project/sample_app/storage/: cache.py  database.py  repositories.py
sample_project/sample_app/utils/: retry.py  text.py
sample_project/sample_app/workers/: jobs.py  scheduler.py
sample_project/tests/: __init__.py  test_bm25.py  test_pipeline.py
src/: config.py  config.yaml  main.py
src/agent/: factory.py  orchestrator.py  tools.py
src/context/indexers/: code_parser.py  factory.py  hybrid_qdrant.py  semantic_chroma.py  semantic_qdrant.py
src/llm/: factory.py
src/memory/: session.py  short_term.py
src/observability/: logger.py
src/tools/: filesystem_tool.py  terminal_tool.py
(+4 files in other folders)
