[project]
name = "claude-code-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.7",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-languages>=1.10.2",
]

[project.scripts]
claude-code-cli = "main:run"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
