[project]
name = "claude-code-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastembed>=0.8.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.7",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langchain-qdrant>=1.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "tree-sitter-language-pack>=0.13.0",
]

[project.scripts]
claude-code-cli = "main:run"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
